VB-000000: Add README